--- a/content/post/2024-07-29-Clash.md
+++ b/content/post/2024-07-29-Clash.md
@@ -9,7 +9,7 @@ categories:
 description: 装环境实在太麻烦啦，mark一些安装命令，以备不时之需。
 tags:
   - Ubuntu
-URL: /2024-07-29-Clash
+url: /2024-07-29-Clash
 image:
 ---
 下载文件 `clash-linux-amd64-v1.17.0.gz`
