--- a/content/post/2024-07-29-Docker.md
+++ b/content/post/2024-07-29-Docker.md
@@ -12,8 +12,58 @@ tags:
 url: /2024-07-29-Clash
 image:
 ---
+### docker
+https://www.runoob.com/docker/docker-container-connection.html
+
+for ubuntu20+
+
+[Ubuntu中docker的安装和使用_ubuntu docker_urnotlanxi的博客-CSDN博客](https://blog.csdn.net/urnotlanxi/article/details/128005616)
+
+### 常用命令
+#### image
+```bash
+docker images
+
+docker pull <image_name>
 
 
+# delete
+docker rmi <image_name_or_id>
+docker rmi my_image:my_tag
+# 强制删除
+docker rmi -f abc123
+
+
+```
+#### container
+```bash
+# ALL Container
+docker ps -a 
+# Running Conatiner
+docker ps
+
+docker start <container_id_or_name>
+docker stop <container_id_or_name>
+
+docker run <options> <image_name>
+
+# 查看容器资源使用情况
+docker stats <container_id_or_name>
+
+# 进入容器
+docker exec -it <container_id_or_name> /bin/bash
+
+```
+
+#### Docker Compose
+```bash
+# 启动服务
+docker-compose up
+# 后台启动
+docker-compose up -d
+
+docker-compose down
+```
 
 ### docker pull 加速
 在挂了clash代理后docker pull的速度非常慢，后来得知docker不走系统代理，原来docker需要单独配置代理
@@ -32,3 +82,141 @@ Environment="NO_PROXY=localhost,127.0.0.1,docker-registry.example.com"
 
 
 https://blog.ohmykreee.top/article/deploy-nextjs-static-page-to-github-pages/
+
+
+
+### Brew 太慢
+https://zhuanlan.zhihu.com/p/90508170
+
+
+
+
+### docker 配置ssh
+
+创建`entrypoint.sh`指定password
+```sh
+#!/bin/bash
+
+echo "root:${PASSWORD}" | chpasswd
+
+/usr/sbin/sshd -D
+```
+
+创建`DockerFile`
+```bash
+FROM ubuntu:20.04
+
+ENV PASSWORD "root"
+
+RUN sed -i "s/archive.ubuntu.com/mirrors.aliyun.com/g" /etc/apt/sources.list \
+
+&& apt update \
+
+&& apt-get install -y openssh-server \
+
+&& apt-get clean \
+
+&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+  
+
+# Create the privilege separation directory and fix permissions
+
+RUN mkdir -p /run/sshd \
+
+&& chmod 755 /run/sshd
+
+RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+
+  
+
+COPY entrypoint.sh /entrypoint.sh
+
+RUN chmod +x /entrypoint.sh
+
+  
+
+# Expose SSH port
+
+EXPOSE 22
+
+  
+
+ENTRYPOINT ["bash", "-c", "/entrypoint.sh"]
+```
+
+运行
+```bash
+docker build -t my-sshd:latest .
+
+
+docker run -d --name mysshd -p 222:22 -e PASSWORD="123456" my-sshd:latest 
+
+ssh -p 222 root@localhost
+
+```
+
+
+
+**分步运行**
+```shell
+# 检查容器中是否有ssh服务
+/etc/init.d/ssh status
+
+# 若没有相关ssh服务，则需进行ssh安装
+sudo apt-get update && apt-get install -y openssh-server
+
+# 设置允许root 远程访问
+vim /etc/ssh/sshd_config
+
+
+# 在#PermitRootLogin prohibit-password下添加如下内容 
+PermitRootLogin yes 
+RSAAuthentication yes 
+PubkeyAuthentication yes
+
+
+# 重启ssh服务
+service ssh restart
+# or
+systemctl restart sshd #由于容器中不能调用 systmctl命令,故命令只在宿主机配置ssh时使用 ，容器中使用service
+
+
+# 配置容器内的用户密码
+passwd
+```
+
+
+
+**开机自启动**
+在宿主机上设置开机自启可动
+```shell
+sudo systemctl enable ssh
+```
+
+在容器中设置开机自启动(登陆容器时，即触发)
+```shell
+ # 找到并打开文件/root/.bashrc
+vim ~/.bashrc
+# 在.bashrc末尾添加如下代码
+service ssh start
+
+source ~/.bashrc
+```
+
+**一键创建**
+```shell
+
+docker run -d -it \
+  --name my-ubuntu-ssh \
+  -p 7800:22 
+  -p 7801:80 \
+  ubuntu:latest \
+  /bin/bash -c "apt-get update && apt-get install -y openssh-server && \
+  sed -i 's/#PasswordAuthentication yes/' /etc/ssh/sshd_config && \
+  sed -i 's/#PermitRootLogin yes/PermitRootLogin yes/' /etc/ssh/sshd_config && \
+  /usr/sbin/sshd -D"
+```
+
+
+docker run -d -it --name spanish -p 7800:22 -p 7801:8080  ubuntu-ssh:latest
