--- a/content/post/Template.mdx
+++ b/content/post/Template.mdx
@@ -8,36 +8,8 @@ categories:
   - Post
 description: 
 tags: 
-url: /Data/title
+url: 
 image:
 ---
-
-
-# GFM
-
-## Autolink literals
-
-www.example.com, https://example.com, and contact@example.com.
-
-## Footnote
-
-A note[^1]
-
-[^1]: Big note.
-
-## Strikethrough
-
-~one~ or ~~two~~ tildes.
-
-## Table
-
-| a | b  |  c |  d  |
-| - | :- | -: | :-: |
-
-## Tasklist
-
-* [ ] to do
-* [x] done
-
 
 
