--- a/content/post/2024-08-25-服务器.md
+++ b/content/post/2024-08-25-服务器.md
@@ -2,8 +2,8 @@
 title: Linux 使用技巧
 tags:
   - skill
-layout: list
 date: 2024-8-25
+layout: list
 categories:
   - Note
 ---
@@ -173,7 +173,7 @@ scp  ./files_name.txt git@166.111.77.123:/home/shangyj/files
 - pm2 start
 - pm2 restart {app_name}
 - pm2 stop {app_name}
-- pm2 delete app_name}
+- pm2 delete {app_name}
 - pm2 clean --all
 
 ## tmux
@@ -277,4 +277,4 @@ cpu 使用：`top`
 
 ## QA
 
-[2023-11-25-ubuntu-environment](../post/2023-11-25-ubuntu-environment.md)
+[2023-11-25-ubuntu-environment]()
