--- a/content/post/2024-09-03-React+Webpack Cli.mdx
+++ b/content/post/2024-09-03-React+Webpack Cli.mdx
@@ -6,10 +6,9 @@ date: 2024-09-29
 author: heavenmei
 categories:
   - Post
-description: 
+description: 编写markdown文件，利用前端技术栈搭建静态网站，部署GitHub Page
 tags:
   - Front
-url: /2024-09-03-ReactWebpackCli
 image:
 ---
 
