--- a/content/post/Template.mdx
+++ b/content/post/Template.mdx
@@ -1,15 +1,13 @@
 ---
 title: Template
-subtitle: 
+description: 
 layout: post
 date: 
 author: heavenmei
 categories:
   - Post
-description: 
 tags: 
-url: 
-image:
+teaser:
 ---
 
 
