--- a/content/post/2024-09-04-MD2HTML.mdx
+++ b/content/post/2024-09-04-MD2HTML.mdx
@@ -1,5 +1,5 @@
 ---
-title: contentlayer将md文件变成html
+title: React+Contentlayer构建静态博客网站
 subtitle: 
 layout: post
 date: 2024-09-04
@@ -12,7 +12,6 @@ tags:
 url: 
 image:
 ---
-GLSL全称是 Graphics Library Shader Language （
 > [Contentlayer](https://www.contentlayer.dev/) 是一个功能强大的静态网站生成器，专为构建和管理静态页面、网站和博客而设计。它提供了一种简单而灵活的方式来创建和组织内容，可以将`Markdown`文件转换为静态`HTML`页面。
 
 
