--- a/content/post/2023-12-7-authentication.mdx
+++ b/content/post/2023-12-7-authentication.mdx
@@ -5,9 +5,7 @@ description: ""
 date: 2023-11-25
 author: heavenmei
 image: ""
-tags:
-  - tag1
-  - tag2
+tags: []
 categories:
   - Post
 url: /2023-12-07-secret
