--- a/content/post/2024-10-25-WebGL-david-Fluid.mdx
+++ b/content/post/2024-10-25-WebGL-david-Fluid.mdx
@@ -19,7 +19,7 @@ image:
 
 
 ## pipeline梳理
-https://www.figma.com/design/gD4D7ukMqk58Ih0olsOECE/Fluid?node-id=23-810&node-type=frame&t=H7NPczq9Ploaxigt-0
+![](assets/2024-10-25-WebGL-david-Fluid-20241110081353.png)
 
 
 ### 球体渲染
