--- a/content/post/2024-10-25-WebGL-david-Fluid.mdx
+++ b/content/post/2024-10-25-WebGL-david-Fluid.mdx
@@ -91,7 +91,13 @@ WebGL中实例化渲染的扩展。实例化渲染允许您在单个绘制调用
 
 
 
-### 球形环境光遮挡体积技术
+### 球形环境光遮挡体积技术AO
+
+
+
+
+### 最终效果
+根据输入图片赋值粒子颜色
 
 ![](assets/out.gif)
 ###  Reference
