--- a/content/post/2024-11-10-typora-mac-activate.mdx
+++ b/content/post/2024-11-10-typora-mac-activate.mdx
@@ -19,6 +19,6 @@ teaser:
 4. 输入 `hasActivated="true"==e.hasActivated `搜索，将它改为  `hasActivated="true"=="true"`
 5. 重新打开typora看到成功激活！！！
 
-![](assets/2024-11-10-typora-mac版本激活-20241110064025.png)
+![](assets/2024-11-10-typora-mac-activate-20241110064025.png)
 
 但是会每次打开都弹出这个，暂未解决🥲
