--- a/content/post/2024-07-29-Clash.mdx
+++ b/content/post/2024-07-29-Clash.mdx
@@ -46,4 +46,12 @@ ExecStart=/usr/local/bin/clash -d /home/haiwen/.config/clash/
 WantedBy=multi-user.target
 ```
 
-`sudo systemctl daemon-reload # 刷新配置` `sudo systemctl start clash # 启动clash.service` `sudo systemctl enable clash # 设置开机启动` `sudo systemctl status clash # 查看clash.service的状态`
+
+
+```bash
+sudo systemctl daemon-reload # 刷新配置
+
+sudo systemctl start clash # 启动clash.service` 
+sudo systemctl enable clash # 设置开机启动
+sudo systemctl status clash # 查看clash.service的状态`
+```
