--- a/content/post/2024-12-30-nvm&node.md
+++ b/content/post/2024-12-30-nvm&node.md
@@ -1,5 +1,5 @@
 ---
-title: nvm&node 环境配置
+title: nvm&node 环境配置+ 包管理器
 subtitle: 
 layout: post
 date: 2024-12-30
@@ -50,6 +50,8 @@ npm config get registry
 
 npm install -g yarn
 
+npm install -g pnpm
+
 # 设置yarn镜像源
 yarn config set registry https://registry.npmmirror.com
 
@@ -57,3 +59,135 @@ yarn config set registry https://registry.npmmirror.com
 yarn config get registry
 
 ```
+
+
+## npm、yarn、pnpm
+
+npm：2010 年发布，是nodeJs内置的包管理工具。
+
+yarn：Facebook 2016 年发布，为解决当时npm存在的缺陷
+- 使用`yarn.lock`文件解决那时候npm安装的不确定性（那时候npm还没有lock文件，npm5才有）
+- yarn并行安装的机制比npm的顺序安装速度更快，
+- 带来了可以从缓存中获取的离线模式。
+- 更简洁的命令行输出
+
+
+pnpm：performant npm，意为高性能的Node.js包管理器，由Zoltan Kochan 于2017 年发布，具有速度快、节省磁盘空间的特点。
+
+|        | npm               | yarn            | pnpm                                 |
+| ------ | ----------------- | --------------- | ------------------------------------ |
+| 安装所有依赖 | npm install       | yarn            | pnpm install                         |
+| 安装依赖   | npm install xxx   | yarn add xxx    | pnpm install xxx / pnpm add xxx      |
+| 移除依赖   | npm uninstall xxx | yarn remove xxx | pnpm remove xxx / pnpm uninstall xxx |
+| 更新依赖   | npm update xxx    | yarn update xxx | pnpm update xxx / pnpm update xxx    |
+
+### 为什么用pnpm
+
+[为什么要用pnpm？](https://link.juejin.cn/?target=https%3A%2F%2Fwww.kochan.io%2Fnodejs%2Fwhy-should-we-use-pnpm.html "https://www.kochan.io/nodejs/why-should-we-use-pnpm.html")
+
+
+当使用 npm 或 yarn 时，如果你有 100 个使用 lodash 的包，那么你将拥有 磁盘上有 100 个 lodash 副本。
+
+==pnpm 会把它保存在你机器上的全局存储（store）中， 然后从中创建一个硬链接，而不是复制。对于模块的每个版本，磁盘上只保留一个副本==。而且后续安装依赖时，如果该依赖之前已经安装过了，在store中已经有了该依赖，这时候就会直接使用hard link，大大减少安装时间。
+
+
+### node_modules结构
+假设C包依赖B包，B包依赖A包
+
+npm1 和npm2 是嵌套结构，敲套太深路径太长，相同的依赖会重复安装造成浪费。
+```shell
+node_modules
+└─ npm_c
+   ├─ index.js
+   ├─ package.json
+   └─ node_modules
+      └─ npm_b
+         ├─ index.js
+         ├─ package.json
+         └─ node_modules
+      		└─ npm_a
+         	├─ index.js
+         	└─ package.json
+```
+
+
+**npm3和yarn 使用扁平化依赖树**，但是要生成扁平依赖的结构，就需要先遍历所有项目依赖关系来构建完整的依赖树，以此来决定生成的目录结构，扁平化依赖树的算法相当复杂这也造成了安装慢的问题。
+
+但是如果存在相同依赖包的不同版本号时，假设D 依赖 B@1.0.0, C依赖B@1.0.1
+
+```shell
+node_modules
+├─ npm_a
+│  ├─ index.js
+│  └─ package.json
+│
+├─ npm_b  // @1.0.1
+│  ├─ index.js
+│  └─ package.json
+│
+├─ npm_c
+|  ├─ index.js
+|  └─ package.json
+|
+└─ npm_d
+   ├─ node_modules
+   |  └─ npm_b // @1.0.0
+   |     ├─ index.js
+   |     └─ package.json
+   ├─ index.js
+   └─ package.json
+```
+
+
+**pnpm则不使用扁平化依赖树**。pnpm优化了pnpm@2，使用嵌套结构，但项目根目录下的node_modules文件夹下的各个依赖文件夹都是**软链接**，而 .pnpm 文件夹下有所有依赖的扁平化结构，以依赖名加版本号命名目录名，其目录下的node_modules下有个相同依赖名的目录，是**硬链接**，除了相同依赖名的目录，如果该依赖还有其他的依赖，也会展示在同级下，是软链接，它们的真正位置也是扁平在.pnpm项目下的对应位置的硬链接
+
+```shell
+├─.pnpm
+│  ├─npm_a@1.0.1
+│  │  └─node_modules
+│  │      └─ npm_a //硬链接 -> <store>/npm_a
+│  │         ├─ index.js
+│  │		 └─ package.json
+│  ├─npm_b@1.0.0
+│  │  └─node_modules
+│  │      ├─ npm_a //软链接 
+│  │      └─ npm_b //硬链接 -> <store>/npm_b@1.0.0
+│  │         ├─ index.js
+│  │		 └─ package.json
+│  ├─npm_b@1.0.1
+│  │  └─node_modules
+│  │      ├─ npm_a //软链接 
+│  │      └─ npm_b //硬链接 -> <store>/npm_b
+│  │         ├─ index.js
+│  │		 └─ package.json
+│  ├─npm_c@1.0.1
+│  │  └─node_modules
+│  │      ├─ npm_b //软链接 
+│  │      └─ npm_c //硬链接 -> <store>/npm_c
+│  │         ├─ index.js
+│  │		 └─ package.json
+│  ├─npm_d@1.0.1
+│  │  └─node_modules
+│  │      ├─ npm_b //软链接 
+│  │      └─ npm_d //硬链接 -> <store>/npm_d
+│  │         ├─ index.js
+│  │		 └─ package.json
+│  └─node_modules
+│      ├─ npm_a //软链接 
+│      └─ npm_b //软链接 
+└─ npm_c   // 软链接 
+└─ npm_d   // 软链接 
+```
+
+
+[# How peers are resolved](https://pnpm.io/how-peers-are-resolved)
+
+[pnpm 什么情况下一个版本的依赖会出现两次](https://zhuanlan.zhihu.com/p/370243042)
+
+
+##  NPM依赖包版本号~和^和*的区别
+
+
+- `~` 会匹配最近的小版本依赖包，比如~1.2.3会匹配所有1.2.x版本，但是不包括1.3.0  
+- `^` 会匹配最新的大版本依赖包，比如^1.2.3会匹配所有1.x.x的包，包括1.3.0，但是不包括2.0.0  
+- `*` 这意味着安装最新版本的依赖包
