--- a/content/post/2024-01-12-Git.md
+++ b/content/post/2024-01-12-Git.md
@@ -12,158 +12,156 @@ url: /2024-01-12-git
 
 
 ## 基本操作
-**git add** 
+- **git add**  : 添加到暂存区
+- **git commit**: 提交到本地仓库
+	- `--amend`： 修改git提交记录用法,本质上就是生成了新的commit，替代了上一次。**可用于修改本地未 push 的 commit**
+- **git push**
+- **git status**
+- **git fetch**
+- **git pull**:  
+	- `git pull = git fetch + git merge`
+	- `git pull --rebase/-r = git fetch + git rebase`
+- **git branch**: 列出你在本地的分支
+	- `git branch <branch_name>`: 创建分支
+	- `-d <branch_name>`: 删除分支
 
-**git commit**
-```bash
-# 修改git提交记录用法,本质上就是生成了新的commit，替代了上一次commit的位置
-git commit --amend
-```
-
-**git push**
-
-**git status**
-
-**git fetch**
-
-**git pull**
-
-```bash
-git pull = git fetch + git merge
-git pull --rebase = git fetch + git rebase
-
-git pull --rebase/-r
-```
-
-**git branch**
-列出，创建或删除分支
-```bash
-# 列出你在本地的分支
-git branch
-
-# 创建分支
-git branch <branch_name>
-# 删除分支
--d <branch_name>
-```
-
-**git checkout**
-```bash
-# 切换分支
-git checkout <branch_name>
-
-# 创建一个名为<new_branch>的新分支并在<start_point>处启动它
--b <new_branch>
-```
-
-**git remote**
-
-
-**git stash:**
-将变化储存的工作目录中
-`git stash pop`： 恢复缓存
-
-
-**git log**
-命令显示从最近到最远的提交日志
+- **`git checkout <branch_name>`**：切换分支
+	- `-b <new_branch>`： 创建一个新分支并启动它
+- **git remote**
+- **git stash**： 将变化储存的工作目录中
+	- `git stash pop`： 恢复缓存
+- **git log**： 命令显示从最近到最远的提交日志
+- `HEAD~1` 是最后一次 commit，`HEAD~2` 是倒数第二次. `^` 表示该 commit 的前一个 commit，`HEAD^`表示上次提交
 ## 合并
-#### git merge
-**两种用途：**
-1. 用于git-pull中，来整合另一代码仓库中的变化（即：git pull = git fetch + git merge）
-2. 用于从一个分支到另一个分支的合并
+### git merge
 
-**合并策略**：Git merge有两种主要的合并策略：fast-forward和recursive。
-**fast-forward**：默认，当前分支合并到另一分支时，如果没有分歧解决，就会直接移动文件指针。
-例如：假设存在以下历史记录，创建topic分支后主分支没有任何提交，并且当前分支是"master"
-```shell
-          A---B---C topic
-         /
-    D---E master
-```
-然后 `git merge topic`将会把ABC节点与E节点连接，直接移动HEAD指针
-```shell
-          A---B---C topic
-         /
-    D---E---A---B---C master
-```
-
-
-**recursive**：Git会创建一个新的提交来表示合并结果，这个提交会包含两个分支的所有变更内容。
-例如：假设存在以下历史记录，并且当前分支是"master"：
-```shell
-          A---B---C topic
-         /
-    D---E---F---G master
-```
-
-然后 `git merge topic`将会把ABC节点与G节点合并，并且将结果记录在新的提交H中。C节点和G节点都是H节点的父节点。
-
-```shell
-          A---B---C topic
-         /         \
-    D---E---F---G---H master
-```
-
-
+**参数**
+- `-m <message>`：指定新的合并提交的提交信息。
 
 **子命令**
-- `--abort`：抛弃当前合并冲突的处理过程并尝试重建合并前的状态。
+- `--abort`：**抛弃**当前合并冲突的处理过程并尝试重建合并前的状态。
 - `--continue`：由于冲突停止后，您可以通过运行来结束合并
 - `--ff`：当合并策略为fast-forward时，只更新分支指针，而不创建合并提交。这是默认行为。
 - `--no-ff`：即使合并策略为fast-forward，也可以创建合并提交。这是合并tag时的默认行为。
 - `--squash`：将合并结果压缩为一个提交，并且不会保留源分支的提交历史。（与`--no-ff`冲突）
 
-**参数**
-- `-m <message>`：指定新的合并提交的提交信息。
 
+Git merge有两种主要的**合并策略**：fast-forward和recursive。
 
-#### git rebase
-变基，改变基底
-例如：假设存在以下历史记录，并且当前分支是"topic"：
+#### fast-forward (默认)
+
+当前分支合并到另一分支时，如果没有分歧解决，就会直接移动文件指针。
+
+举个例子🌰：创建 feature 分支后主分支没有任何提交，并且当前分支是"master"
 ```shell
-          C---D topic
-         /
-    A---B---M master
+	 C---D---E  feature
+	/
+A---B            master # to merge
+```
+然后 `git merge topic`将会把CDE节点与B节点连接，直接移动HEAD指针
+```shell
+	 C---D---E     feature
+	/
+A---B---C---D---E  master # to merge
 ```
 
-此时我们在topic分支上，执行rebase命令，相当于是想要把master分支合并到topic分支（这一步的场景就可以类比为我们在自己的分支 topic 上开发了一段时间了，准备从主干master上拉一下最新改动。模拟了`git pull --rebase`的情形）
+
+#### recursive
+Git会创建一个**新的提交**来表示合并结果，这个提交会包含两个分支的所有变更内容。
+
 ```shell
-# 这两条命令等价于git rebase master topic
-git checkout topic
+	 C---D---E  feature
+	/
+A---B---F---G   master # to merge
+```
+
+然后 `git merge topic`将会把CDE节点与G节点合并，并且将结果记录在新的提交H中。E节点和G节点都是H节点的父节点。
+
+```shell
+	 C---D---E      feature
+	/          \
+A---B---F---G---H   master # to merge
+```
+
+
+
+### git rebase
+变基（改变基底）:
+- `-i/--interactive`: 交互式，进入vi编辑模式
+
+假设我们在 feature 分支上，执行rebase命令，相当于是想要把master分支合并到 feature 分支。
+
+这一步的场景就可以类比为我们在自己的分支 feature 上开发了一段时间了，准备从主干master上拉一下最新改动。模拟了`git pull --rebase`的情形。 `git pull --rebase = git fetch + git rebase`
+
+```shell
+	  C---D feature # to rebase
+	 /
+A---B---M   master
+```
+
+此时，
+```shell
+git checkout feature
 git rebase master
+
+# 这两条命令等价于
+git rebase master feature
 ```
-此时历史记录变成:**注意这里的接法，实际是会依次拿M和C、D内容分别比较，处理冲突后生成新的C’和D’，然后删除原本的CD提交**，相当于topic分支的基底由原来的B变成了M（主分支最新的提交）
+此时历史记录 ==实际是会依次拿M和C、D内容分别比较，处理冲突后生成新的C’和D’，然后删除原本的CD提交== ，相当于 feature 分支的基底由原来的B变成了M（主分支最新的提交）
 ```shell
-	          C‘---D’ topic
-	         /
-    A---B---M master
+		  C‘---D’ feature
+		 /
+A---B---M master
 ```
 
-注意，如果master上在B以后没有新提交，那么就还是用原来的B作为基，rebase操作相当于无效，此时和git merge就基本没区别了，**差异只在于git merge会多一条记录Merge操作的提交记录**
 
-> 上面的例子可抽象为如下实际工作场景：
-> 远程库上有一个master分支目前开发到B了，张三从B拉了代码到本地的 topic 分支进行开发，目前提交了两次，开发到D了；李四也从B拉到本地的master分支，他提交到了M，然后合到远程库的master上了。此时张三想从远程库master拉下最新代码，于是他在feature分支上执行了git pull origin master:topic --rebase（注意要加–rebase参数），即把远程库master分支给rebase下来，
-> 由于李四更早开发完，此时远程master上是李四的最新内容，rebase后再看张三的历史提交记录，就相当于是张三是基于李四的最新提交M进行的开发了。（但实际上张三更早拉代码下来，李四拉的晚但提交早）
+注意⚠️，如果master上在B以后没有新提交，那么就还是用原来的B作为基，rebase操作相当于无效，此时和git merge就基本没区别了，**差异只在于git merge会多一条记录Merge操作的提交记录**。 (==可以用于修改commit 提交==)
+
+
+#### 变基时可用的命令
+- `pick/p`: 直接使用该 commit，不做任何修改
+- `reword/r`:  类似 pick ，但是变基过程会暂停，让你有机会更改提交信息
+- `edit/e`:  修订提交
+- `squash/s`:  将两个或以上的提交合并为一个
+- `fixup/f`:   类 似squash ，但要丢弃合并的注释
+- `exec/x`: 
+
+
+### cherry-pick
+
+- `git merge`：合并另一个分支的 **所有代码** 变动
+- `git cherry-pick <hashA> <hashB>`： 合并 **某一个commit** 的代码变动
+
+
+假设 我们想把 F 合到 master 分支，
+```shell
+	  E---F---G  feature
+	 /
+A---B---C---D    master # cherry-pick
+```
+
+
+此时我们在 master 分支上进行cherrt pick 操作`git cherry-pick F`,  master 分支的末尾增加了一个提交 F 。
+```shell
+	  E---F---G  feature
+	 /
+A---B---C---D---F    master # cherry-pick
+```
+
 
 
 ## 回滚
-#### git reflog
+### git reflog
 查看命令历史，以便确定要回到未来的哪个版本
 
-#### git reset
-将当前 HEAD 重置为指定状态
-```shell
-     git add . ------------> git commit -m 说明 -------------> git push
-   (添加到暂存区)              （提交到本地仓库）             （推送到远程仓库）
-```
+### git reset （删除提交）
+
 **子命令**
-- `--soft`:该命令表示撤销代码到暂存区之后，`commit`之前，代码在本地不会改变。
-- `--mixed`:该命令表示撤销代码到暂存区和`commit`之前，代码在本地不会改变。
-- `--hard`:该命令表示回退代码到某个版本下，代码在本地会改变到指定版本下，谨慎操作。
+- `--mixed`:（默认）回退到某个版本， 只保留源码（ ==代码在本地不会改变==），回退commit + add信息；
+- `--soft`:回退到某个版本， 只回退了commit的信息（==代码在本地不会改变==） 。如果还要提交，直接commit即可；
+- `--hard`: 彻底回退到某个版本，本地的源码也会变为上一个版本的内容 （==代码在会变==），**慎用！**
 
-
-#### git revert
-恢复一些现有的提交
+### git revert （新增提交）
 
 **子命令**
 - `--abort`： 取消操作并返回到预序列状态。
@@ -172,7 +170,7 @@ git rebase master
 - `-n`: --no-commit,该命令会自动创建一些提交日志消息，提交哪些提交已恢复。此标志应用必要的更改以将命名的提交恢复到您的工作树和索引，但不进行提交。
 
 
-#### reset vs revert
+### reset vs revert
 reset和revert都可以用来回滚代码。但他们是有区别的：
 - reset是用来"回退"版本，删除原本的commit记录
 - revert是用来"还原"某次或者某几次提交。生成新的一条commit记录
@@ -186,7 +184,7 @@ e50b7c2 第二次修改
 3a52650 第一次修改
 ```
 
-执行 `git reset --hard 97ea0f9`,这个时候，git的提交历史变为:
+执行 `git reset --hard 97ea0f9`,这个时候==第四次修改的代码会消失==，master当前指向97ea0f9这个版本，我们回到了第三次修改。git的提交历史变为:
 
 ```shell
 97ea0f9 (HEAD -> master) 第三次修改
@@ -194,7 +192,7 @@ e50b7c2 第二次修改
 3a52650 第一次修改
 ```
 
-可以看到master当前指向97ea0f9这个版本，我们回到了第三次修改。
+
 但是如果执行 `git revert -n 97ea0f9`, 然后重新commit `git commit -m "恢复第三次修改"`,
 ```shell
 33b8b30 (HEAD -> master) Revert "恢复第三次修改"
@@ -203,13 +201,12 @@ e50b7c2 第二次修改
 e50b7c2 第二次修改
 3a52650 第一次修改
 ```
-Git把第三次修改从提交中剔除(还原)了，还保留了第四次修改，并且产生了新的commit_id。
-
+Git把第三次修改从提交中还原了，还保留了第四次修改，并且产生了新的commit_id。
 
 
 ## 实际应用
 [一个成功的Git分支模型](https://www.jianshu.com/p/b357df6794e3)
-### git如何把master合并到自己分支
+### 如何把master合并到自己分支
 1. 切换到主分支 `git chekout master`
 2. pull到本地 `git pull`
 3. 切换到自己的分支 `git checkout xxx`
@@ -253,6 +250,61 @@ git commit -m 'update .gitignore'
 
 
 ###  git Recv failure: Connection was reset
-移除旧的origin ：`git remote remove origin`  
-再重新建立新的origin ： `git remote add origin xxx`
-重新push就可以了
+- 移除旧的origin ：`git remote remove origin`  
+- 再重新建立新的origin ： `git remote add origin xxx`
+- 重新push就可以了
+
+
+### 修改git commit 提交记录
+
+#### --amend
+只修改最后一个commit 可以用 `--amend`
+```shell
+git commit -m "new comment" --amend
+
+// 打印出最后一次commit详情
+git commit --amend
+```
+
+
+#### git rebase
+
+1. 首先，你需要找到要修改的 commit 的位置。执行rebase。`HEAD~1` 是最后一次 commit，`HEAD~2` 是倒数第二次.
+	```shell
+	# ^ 表示该 commit 的前一个 commit
+	git rebase -i <commit-hash>^
+	
+	git rebase -i HEAD~2
+	```
+
+2. vi编辑器会显示最新两条commit，找到你要修改的 commit，将 `pick` 改为 `edit`（或简写 `e`），然后 `:wq`保存并退出。此时会有一个临时的正在变基的分支生成，再次查看git log，该分支的的最新提交为edit 选中。
+	- `pick`： 直接使用该 commit，不做任何修改。
+	- `edit`：使用该 commit 的代码变更。
+
+	```shell
+	## vi 会显示最近两条commit
+	edit 7ef054e comment1  # 修改为edit
+	pick 5e0f88b comment2
+	```
+3. `--amend` 修改commit注释，
+4. `git rebase --continue` 继续进行变基即可。如果有冲突会让你先解决冲突。
+
+
+
+
+### 合并多个commit
+
+利用 git rebase --> squash/ fixup， 可以合并多个commit。
+1. `git rebase -i HEAD~2`， 会打开vi编辑器
+2.  将要合并的两个commit 的最新一次 pick 修改 `s/squash`
+3. 然后在此进入vi编辑器，修改 注释。保存退出即可
+
+```shell
+squash 7ef054e comment1  # 修改为squash
+pick 5e0f88b comment2
+pick 6e0f82b comment3
+
+# 结果如下
+pick 5e0f88b comment2 comment1 # 合并
+pick 6e0f82b comment3
+```
