--- a/content/post/2024-12-30-nvm&node.md
+++ b/content/post/2024-12-30-nvm&node.md
@@ -81,6 +81,9 @@ pnpm：performant npm，意为高性能的Node.js包管理器，由Zoltan Kochan
 | 移除依赖   | npm uninstall xxx | yarn remove xxx | pnpm remove xxx / pnpm uninstall xxx |
 | 更新依赖   | npm update xxx    | yarn update xxx | pnpm update xxx / pnpm update xxx    |
 
+
+
+
 ### 为什么用pnpm
 
 [为什么要用pnpm？](https://link.juejin.cn/?target=https%3A%2F%2Fwww.kochan.io%2Fnodejs%2Fwhy-should-we-use-pnpm.html "https://www.kochan.io/nodejs/why-should-we-use-pnpm.html")
@@ -183,6 +186,18 @@ node_modules
 [# How peers are resolved](https://pnpm.io/how-peers-are-resolved)
 
 [pnpm 什么情况下一个版本的依赖会出现两次](https://zhuanlan.zhihu.com/p/370243042)
+### pnpm 解决 幽灵依赖
+
+**npm 升级成扁平化包管理的方式的原因(导致幽灵依赖出现)。**
+
+首先幽灵依赖会带来**版本或者依赖丢失**问题。 举个例子🌰:
+
+B 依赖 A@1.0，我们install B的时候自动安装了A，假如我们项目中凑巧也需要用到 A@1.0 （即幽灵依赖），又凑巧 我们需要将B@1.0升级到B@2.0 而B2中依赖的是A2。因此导致依赖丢失 或 版本不兼容的问题。
+
+
+但是！==pnpm则不使用扁平化依赖树==。它把所有的包存到一个仓库文件夹里面，然后在node_modules里面用正常的树结构，来表达包依赖。
+
+
 
 
 ##  NPM依赖包版本号~和^和*的区别
