--- a/content/post/2025-04-01-interview-26-summer.mdx
+++ b/content/post/2025-04-01-interview-26-summer.mdx
@@ -45,19 +45,39 @@ image:
 
 ## 字节一面（04-01）
 
+- sse 流式输出 异常case
+	- 假设消息推送顺序错乱
+	- 推送了一些重复内容
+- 代理抓包的实现原理。如何抓到一个https的请求，并且解析出内容
+- 微前端框架是为了解决什么问题？沙箱机制的一些实现方式
+- redux 的理解
+- zustand 如何控制 状态更新 精确的更新到某个组件
+- 原型链 是什么
+- 如何减少原型链的查找过程
+- es6 class 如何实现继承？和构造函数继承的区别
+- promise 基本原理？如何实现链式调用？
+- js 数值机制，(64位双精度浮点数:  64位存储（1位符号 + 11位指数 + 52位尾数）)
+- 跨域问题
+- 为什么hash表的查找效率会比较高？复杂度？会出现退化成On
+- 手撕：Promise 并发器
+- 算法：滑动窗口
+
 
 
 ## 飞猪 电话面 （04-01）
-
+- 流式输出
+- node有哪些性能指标 （不了解）
+- 
 
 
 
 
 ## 美团一面（04-02）
 
-
-
+- 一直在拷打图形学相关的知识，我说了才切换
+- 
 
 
 
 ## 腾讯 二面 （04-03）
+- 
