--- a/content/post/2024-12-30-nvm&node.md
+++ b/content/post/2024-12-30-nvm&node.md
@@ -27,7 +27,6 @@ wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
 
 **nvm 常用命令**
 ```bash
-
 nvm install [version]
 nvm use [version]
 # 设置默认版本
@@ -41,7 +40,6 @@ nvm current
 
 **镜像源**
 ```bash
-
 # 设置npm镜像源
 npm config set registry https://registry.npmmirror.com
 
@@ -60,6 +58,22 @@ yarn config get registry
 
 ```
 
+
+**nvm 镜像**
+```bash
+node_mirror: http//npmmirror.com/mirrors/node/ 
+npm_mirror: http://npmmirror.com/mirrors/npm/
+
+
+vim ~/.bashrc
+
+# add
+export NVM_NODEJS_ORG_MIRROR=http://npmmirror.com/mirrors/node/
+
+source ~/.bashrc
+
+nvm ls-remote
+```
 
 ## npm、yarn、pnpm
 
