--- a/content/post/2025-04-01-interview-26-summer.mdx
+++ b/content/post/2025-04-01-interview-26-summer.mdx
@@ -149,12 +149,61 @@ import * from moduleA；
 
 ## 饿了么 一面（04-10）
 
+- `<meta>` 的作用，属性
+- async defer 的区别
+- css 盒模型
+- css类选择器，优先级
+- 两栏布局，左侧固定，右侧自适应
+- var let const 区别？ 块级作用
+- 闭包，应用场景
+- 常见的异步解决方案，promise常见的api
+- 事件委托
+- new 的作用
+- 常见的排序算法？哪些是稳定的
+- 性能优化的方案
+- React 16 17 18 的区别
+- React常用的API，useCallback的作用，用不用的区别？
+- 合作中的沟通方式，有什么成长
+- 学习前端的方式？有看过什么书
+- 后续的学习规划
 
+> 像是KPI面，20分钟很快就结束了，都是些基础八股
 
 ## 蚂蚁 一面（04-10）
+- 作为项目负责人如何确认这个项目是成功的？如何保障项目
+- 输入url到渲染的过程
+- 内存泄漏，有哪些场景？
+- 防抖节流作用
+- 宏任务微任务
+- 箭头函数和普通函数区别
+- 微前端，qiankun， 如何实现微应用之间的互联
+- Charles抓包原理
+- 对webpack有什么了解
+- 英文自我介绍（国际部门，所以有英文面试）
+- 算法：扁平转树
 
-
-
+> 这么简单的算法没写出来，所以挂了
 ## 字节 广告业务 一面（04-10）
 
+- 输入url到渲染的过程
+- 系统的讲一下HTTP的缓存，强缓存，缓存头
+- 浏览器的缓存有哪些？（localstorage、sessionstorage、cookie） （indexDB不了解）
+- 三次握手和四次挥手
+- box-sizing
+- JS的基本类型
+- 原型链有了解吗？原型链继承？属性和方法具体怎么继承？
+- V8 垃圾回收机制（新生代 & 老生代）
+- 响应式布局
+- 微信小程序的运行模型，相对于浏览器的区别？（不清楚）
+- docker有多少了解，怎么去编排docker？和虚拟机的区别
+- 微前端，有哪些方式实现沙箱？如果是nodejs有什么新的办法实现沙箱
+- 代码题：promise输出 （同时存在resolve和reject只执行一个不走catch）
+- 实现一个有立即执行参数的防抖
+- 实现快速排序，并优化
 
+
+
+
+
+## 美团 基础研发平台 一面（04-16）
+- 
